fixed postcss.config.js style.css, add dark mode and button

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,1 +1,41 @@
 @import "tailwindcss";
+
+@custom-variant dark (&:where(.dark, .dark *));
+
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
+
+@layer base {
+  @font-face {
+    font-family: "AkzidenzGroteskPro";
+    font-weight: 700;
+    font-style: normal;
+    src: url("/fonts/akzidenz/AkzidenzGroteskPro-BoldEx.otf") format("opentype");
+  }
+
+  @font-face {
+    font-family: "AkzidenzGroteskPro";
+    font-weight: 500;
+    font-style: normal;
+    src: url("/fonts/akzidenz/AkzidenzGroteskPro-Md.otf") format("opentype");
+  }
+
+  @font-face {
+    font-family: "AkzidenzGroteskPro";
+    font-weight: 400;
+    font-style: normal;
+    src: url("/fonts/akzidenz/AkzidenzGroteskPro-Regular.otf")
+      format("opentype");
+  }
+
+  html {
+    font-family: "AkzidenzGroteskPro", system-ui, sans-serif;
+  }
+}
+
+@layer components {
+  .logo {
+    @apply text-2xl sm:text-4xl md:text-5xl font-bold;
+  }
+}
